# maldoc-scanner

./: .gitignore  README.md  pyproject.toml  writeup.md
examples/: benign_macro.txt  sample_macro.txt  sample_pdf_features.txt
maldoc/: __init__.py  __main__.py  analyzer.py  cli.py  indicators.py  ole.py  output.py  pdf.py
screenshots/: sample-scan.txt
tests/: test_analyzer.py
