[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maldoc-scanner"
version = "0.1.0"
description = "Static analyzer for malicious Office docs and PDFs — extracts and scores VBA macros, embedded JavaScript, suspicious actions, and IOCs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "B0bTheSkull" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "oletools>=0.60",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
maldoc = "maldoc.cli:main"

[project.urls]
Homepage = "https://github.com/B0bTheSkull/maldoc-scanner"
Issues = "https://github.com/B0bTheSkull/maldoc-scanner/issues"

[tool.setuptools.packages.find]
include = ["maldoc*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
